Added war lives admin commands.